# activity-tracker

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pubspec.yaml  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
Images/: icon.psd
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/activity_tracker_v2/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/hub/src/: lib.rs  tutorials_functions.rs
native/hub/src/actors/: first.rs  mod.rs  second.rs
native/hub/src/signals/: mod.rs
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity_thread.rs  data.rs  day_activity.rs  day_activity_thread.rs  day_record.rs  day_record_file.rs  event_thread.rs  main.rs  payload.rs  records.rs  thread_activity_week.rs  threads.rs  throttle.rs  week_data.rs  week_stats.rs
src-tauri/src/threads/: adjustment_thread.rs  data_thread.rs  day_thread.rs  event_thread.rs
src/lib/: data.ts  graph.svelte  stores.ts
src/lib/components/: activityGraph.svelte  caption.svelte  graph.svelte  stat.svelte  title.svelte
src/lib/helpers/: color.ts  date.ts
src/lib/islands/: adjustDialog.svelte  day.svelte  week.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/weekdata/: +page.svelte
src/types/: index.d.ts
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
