[package]
name = "activity-tracker"
version = "0.5.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
rdev = "0.5.1"
bounded-vec-deque = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["api-all", "devtools", "system-tray"] }
chrono = { version = "0.4.22", features = ["serde"] }
tauri-plugin-window-state = "0.1.0"
ts-rs = { version = "6.2.0", features = ["chrono-impl"] }
serde_with = "2.0.1"
sorted-vec = "0.8.0"
log = "0.4.17"
simple-logging = "2.0.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
